[package]
name = "beabadoobee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.1"
sentiment = "0.1.1"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "macros", "offline", "migrate"] }
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-gateway = "0.15.1"
twilight-http = "0.15.1"
twilight-model = "0.15.1"
twilight-util = { version = "0.15.1", features = ["builder"] }
